--- a/Scales Timer/Base.lproj/Main.storyboard
+++ b/Scales Timer/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="eu7-YB-N5B">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +19,7 @@
                         <viewControllerLayoutGuide type="bottom" id="5JO-oB-ZTX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="7vd-Ya-T25">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -36,25 +37,104 @@
                         <viewControllerLayoutGuide type="top" id="e0V-kf-eKJ"/>
                         <viewControllerLayoutGuide type="bottom" id="cND-TS-cse"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ZwE-P2-1le">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" userInteractionEnabled="NO" contentMode="scaleToFill" id="ZwE-P2-1le">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ccb-jr-4Hx">
-                                <rect key="frame" x="95" y="264" width="0.0" height="0.0"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qJs-re-LlG" userLabel="TimerView">
+                                <rect key="frame" x="20" y="305.66666666666669" width="374" height="125"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5I-Uq-gYO" userLabel="Divider">
+                                        <rect key="frame" x="180.66666666666663" y="29" width="12.333333333333343" height="67"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="56"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="F5I-Uq-gYO" firstAttribute="centerY" secondItem="qJs-re-LlG" secondAttribute="centerY" id="Nxo-sJ-4Em"/>
+                                    <constraint firstAttribute="height" constant="125" id="fme-Yq-cSf"/>
+                                    <constraint firstItem="F5I-Uq-gYO" firstAttribute="centerX" secondItem="qJs-re-LlG" secondAttribute="centerX" id="m4a-oe-0Dt"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnt-ey-7sM" userLabel="ButtonView">
+                                <rect key="frame" x="0.0" y="430.66666666666674" width="414" height="256.33333333333326"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bD-lD-CzL">
+                                        <rect key="frame" x="190" y="112.99999999999994" width="34" height="30"/>
+                                        <state key="normal" title="Start"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="9bD-lD-CzL" firstAttribute="centerY" secondItem="pnt-ey-7sM" secondAttribute="centerY" id="3dm-fa-wxD"/>
+                                    <constraint firstItem="9bD-lD-CzL" firstAttribute="centerX" secondItem="pnt-ey-7sM" secondAttribute="centerX" id="FPL-bm-Mi6"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pdn-Ek-az0">
+                                <rect key="frame" x="0.0" y="20" width="414" height="285.66666666666669"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scales" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mOQ-0r-h6B">
+                                        <rect key="frame" x="141" y="114.33333333333334" width="132.33333333333331" height="57.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="mOQ-0r-h6B" firstAttribute="centerY" secondItem="Pdn-Ek-az0" secondAttribute="centerY" id="Uvu-F7-8xG"/>
+                                    <constraint firstItem="mOQ-0r-h6B" firstAttribute="centerX" secondItem="Pdn-Ek-az0" secondAttribute="centerX" id="YMV-Sg-zuN"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GF9-qi-sBm" userLabel="MinutesLabel">
+                                <rect key="frame" x="75.666666666666657" y="305" width="124.99999999999997" height="125"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="125" id="5dc-j8-aQX"/>
+                                    <constraint firstAttribute="height" constant="125" id="X5q-OZ-Avx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="48"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWO-6s-xwb" userLabel="SecondsLabel">
+                                <rect key="frame" x="213" y="305" width="125" height="125"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="125" id="4vS-Q3-2rk"/>
+                                    <constraint firstAttribute="width" constant="125" id="J0j-I0-rwa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="48"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pnt-ey-7sM" firstAttribute="top" secondItem="qJs-re-LlG" secondAttribute="bottom" id="1WD-IK-jkQ"/>
+                            <constraint firstItem="pnt-ey-7sM" firstAttribute="leading" secondItem="ZwE-P2-1le" secondAttribute="leading" id="47I-eK-cXW"/>
+                            <constraint firstItem="Pdn-Ek-az0" firstAttribute="leading" secondItem="ZwE-P2-1le" secondAttribute="leading" id="6KK-MT-wV3"/>
+                            <constraint firstAttribute="trailing" secondItem="pnt-ey-7sM" secondAttribute="trailing" id="BLw-pR-tkJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qJs-re-LlG" secondAttribute="trailing" id="Lch-YL-wwD"/>
+                            <constraint firstItem="XWO-6s-xwb" firstAttribute="centerY" secondItem="ZwE-P2-1le" secondAttribute="centerY" id="OH0-b1-xYo"/>
+                            <constraint firstItem="GF9-qi-sBm" firstAttribute="centerY" secondItem="ZwE-P2-1le" secondAttribute="centerY" id="PaU-FA-vA8"/>
+                            <constraint firstItem="cND-TS-cse" firstAttribute="top" secondItem="pnt-ey-7sM" secondAttribute="bottom" id="WA3-zO-gQE"/>
+                            <constraint firstItem="pnt-ey-7sM" firstAttribute="centerX" secondItem="ZwE-P2-1le" secondAttribute="centerX" id="WCl-Q2-19H"/>
+                            <constraint firstItem="qJs-re-LlG" firstAttribute="leading" secondItem="ZwE-P2-1le" secondAttribute="leadingMargin" id="ZbD-yh-brq"/>
+                            <constraint firstItem="qJs-re-LlG" firstAttribute="centerX" secondItem="ZwE-P2-1le" secondAttribute="centerX" id="cNt-GW-MkF"/>
+                            <constraint firstItem="F5I-Uq-gYO" firstAttribute="leading" secondItem="GF9-qi-sBm" secondAttribute="trailing" id="edE-pO-OSH"/>
+                            <constraint firstAttribute="trailing" secondItem="Pdn-Ek-az0" secondAttribute="trailing" id="fLb-bb-TOR"/>
+                            <constraint firstItem="Pdn-Ek-az0" firstAttribute="top" secondItem="e0V-kf-eKJ" secondAttribute="bottom" id="p39-5Q-niA"/>
+                            <constraint firstItem="qJs-re-LlG" firstAttribute="top" secondItem="Pdn-Ek-az0" secondAttribute="bottom" id="paX-ab-yed"/>
+                            <constraint firstItem="qJs-re-LlG" firstAttribute="centerY" secondItem="ZwE-P2-1le" secondAttribute="centerY" id="qqQ-sx-sNw"/>
+                            <constraint firstItem="XWO-6s-xwb" firstAttribute="leading" secondItem="F5I-Uq-gYO" secondAttribute="trailing" id="xXJ-do-O2c"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Timer" id="s6Q-mx-Hjp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KR8-qv-Mqh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2275" y="-251"/>
+            <point key="canvasLocation" x="2274.4000000000001" y="-251.42428785607197"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="qXm-bI-X54">
