--- a/Scales Timer/Base.lproj/Main.storyboard
+++ b/Scales Timer/Base.lproj/Main.storyboard
@@ -44,32 +44,42 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qJs-re-LlG" userLabel="TimerView">
                                 <rect key="frame" x="20" y="305.66666666666669" width="374" height="125"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWO-6s-xwb" userLabel="SecondsLabel">
+                                        <rect key="frame" x="193" y="0.0" width="125" height="125"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="125" id="4vS-Q3-2rk"/>
+                                            <constraint firstAttribute="width" constant="125" id="J0j-I0-rwa"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="48"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5I-Uq-gYO" userLabel="Divider">
                                         <rect key="frame" x="180.66666666666663" y="29" width="12.333333333333343" height="67"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="56"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GF9-qi-sBm" userLabel="MinutesLabel">
+                                        <rect key="frame" x="55.666666666666664" y="0.0" width="125" height="125"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="125" id="5dc-j8-aQX"/>
+                                            <constraint firstAttribute="height" constant="125" id="X5q-OZ-Avx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="48"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="GF9-qi-sBm" firstAttribute="centerY" secondItem="qJs-re-LlG" secondAttribute="centerY" id="H1Y-xc-uAO"/>
                                     <constraint firstItem="F5I-Uq-gYO" firstAttribute="centerY" secondItem="qJs-re-LlG" secondAttribute="centerY" id="Nxo-sJ-4Em"/>
                                     <constraint firstAttribute="height" constant="125" id="fme-Yq-cSf"/>
+                                    <constraint firstItem="XWO-6s-xwb" firstAttribute="centerY" secondItem="qJs-re-LlG" secondAttribute="centerY" id="gE0-Re-EnD"/>
+                                    <constraint firstItem="XWO-6s-xwb" firstAttribute="leading" secondItem="F5I-Uq-gYO" secondAttribute="trailing" id="hJY-0z-3h5"/>
                                     <constraint firstItem="F5I-Uq-gYO" firstAttribute="centerX" secondItem="qJs-re-LlG" secondAttribute="centerX" id="m4a-oe-0Dt"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnt-ey-7sM" userLabel="ButtonView">
-                                <rect key="frame" x="0.0" y="430.66666666666674" width="414" height="256.33333333333326"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bD-lD-CzL">
-                                        <rect key="frame" x="190" y="112.99999999999994" width="34" height="30"/>
-                                        <state key="normal" title="Start"/>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="9bD-lD-CzL" firstAttribute="centerY" secondItem="pnt-ey-7sM" secondAttribute="centerY" id="3dm-fa-wxD"/>
-                                    <constraint firstItem="9bD-lD-CzL" firstAttribute="centerX" secondItem="pnt-ey-7sM" secondAttribute="centerX" id="FPL-bm-Mi6"/>
+                                    <constraint firstItem="F5I-Uq-gYO" firstAttribute="leading" secondItem="GF9-qi-sBm" secondAttribute="trailing" id="qa8-AN-ERL"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pdn-Ek-az0">
@@ -88,26 +98,44 @@
                                     <constraint firstItem="mOQ-0r-h6B" firstAttribute="centerX" secondItem="Pdn-Ek-az0" secondAttribute="centerX" id="YMV-Sg-zuN"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GF9-qi-sBm" userLabel="MinutesLabel">
-                                <rect key="frame" x="75.666666666666657" y="305" width="124.99999999999997" height="125"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnt-ey-7sM" userLabel="ButtonView">
+                                <rect key="frame" x="0.0" y="430.00000000000006" width="414" height="256.33333333333343"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kMX-ph-M3y">
+                                        <rect key="frame" x="182" y="103" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="QjP-AK-88g"/>
+                                            <constraint firstAttribute="width" constant="50" id="ysk-yd-dsG"/>
+                                        </constraints>
+                                        <state key="normal" title="Pause"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yu8-Cv-bV9">
+                                        <rect key="frame" x="108" y="103" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="2Pf-HY-7Jc"/>
+                                            <constraint firstAttribute="width" constant="50" id="faN-uF-dHb"/>
+                                        </constraints>
+                                        <state key="normal" title="Start"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3K-2K-9dS">
+                                        <rect key="frame" x="256" y="102" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="RPQ-o7-Dw4"/>
+                                            <constraint firstAttribute="width" constant="50" id="mNU-2F-7A3"/>
+                                        </constraints>
+                                        <state key="normal" title="Reset"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="5dc-j8-aQX"/>
-                                    <constraint firstAttribute="height" constant="125" id="X5q-OZ-Avx"/>
+                                    <constraint firstItem="Yu8-Cv-bV9" firstAttribute="centerY" secondItem="pnt-ey-7sM" secondAttribute="centerY" id="4lr-Ll-uXo"/>
+                                    <constraint firstItem="kMX-ph-M3y" firstAttribute="centerX" secondItem="pnt-ey-7sM" secondAttribute="centerX" id="HJf-6N-KD3"/>
+                                    <constraint firstItem="Q3K-2K-9dS" firstAttribute="centerY" secondItem="pnt-ey-7sM" secondAttribute="centerY" id="T3p-hv-c3c"/>
+                                    <constraint firstItem="Q3K-2K-9dS" firstAttribute="leading" secondItem="kMX-ph-M3y" secondAttribute="trailing" constant="24" id="U1Z-oA-4Tk"/>
+                                    <constraint firstItem="kMX-ph-M3y" firstAttribute="leading" secondItem="Yu8-Cv-bV9" secondAttribute="trailing" constant="24" id="gVT-z6-cet"/>
+                                    <constraint firstItem="kMX-ph-M3y" firstAttribute="centerY" secondItem="pnt-ey-7sM" secondAttribute="centerY" id="jN3-IT-8Rx"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="48"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWO-6s-xwb" userLabel="SecondsLabel">
-                                <rect key="frame" x="213" y="305" width="125" height="125"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="125" id="4vS-Q3-2rk"/>
-                                    <constraint firstAttribute="width" constant="125" id="J0j-I0-rwa"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="48"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -116,21 +144,22 @@
                             <constraint firstItem="Pdn-Ek-az0" firstAttribute="leading" secondItem="ZwE-P2-1le" secondAttribute="leading" id="6KK-MT-wV3"/>
                             <constraint firstAttribute="trailing" secondItem="pnt-ey-7sM" secondAttribute="trailing" id="BLw-pR-tkJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="qJs-re-LlG" secondAttribute="trailing" id="Lch-YL-wwD"/>
-                            <constraint firstItem="XWO-6s-xwb" firstAttribute="centerY" secondItem="ZwE-P2-1le" secondAttribute="centerY" id="OH0-b1-xYo"/>
-                            <constraint firstItem="GF9-qi-sBm" firstAttribute="centerY" secondItem="ZwE-P2-1le" secondAttribute="centerY" id="PaU-FA-vA8"/>
                             <constraint firstItem="cND-TS-cse" firstAttribute="top" secondItem="pnt-ey-7sM" secondAttribute="bottom" id="WA3-zO-gQE"/>
                             <constraint firstItem="pnt-ey-7sM" firstAttribute="centerX" secondItem="ZwE-P2-1le" secondAttribute="centerX" id="WCl-Q2-19H"/>
                             <constraint firstItem="qJs-re-LlG" firstAttribute="leading" secondItem="ZwE-P2-1le" secondAttribute="leadingMargin" id="ZbD-yh-brq"/>
                             <constraint firstItem="qJs-re-LlG" firstAttribute="centerX" secondItem="ZwE-P2-1le" secondAttribute="centerX" id="cNt-GW-MkF"/>
-                            <constraint firstItem="F5I-Uq-gYO" firstAttribute="leading" secondItem="GF9-qi-sBm" secondAttribute="trailing" id="edE-pO-OSH"/>
                             <constraint firstAttribute="trailing" secondItem="Pdn-Ek-az0" secondAttribute="trailing" id="fLb-bb-TOR"/>
                             <constraint firstItem="Pdn-Ek-az0" firstAttribute="top" secondItem="e0V-kf-eKJ" secondAttribute="bottom" id="p39-5Q-niA"/>
                             <constraint firstItem="qJs-re-LlG" firstAttribute="top" secondItem="Pdn-Ek-az0" secondAttribute="bottom" id="paX-ab-yed"/>
                             <constraint firstItem="qJs-re-LlG" firstAttribute="centerY" secondItem="ZwE-P2-1le" secondAttribute="centerY" id="qqQ-sx-sNw"/>
-                            <constraint firstItem="XWO-6s-xwb" firstAttribute="leading" secondItem="F5I-Uq-gYO" secondAttribute="trailing" id="xXJ-do-O2c"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Timer" id="s6Q-mx-Hjp"/>
+                    <connections>
+                        <outlet property="minuteLabel" destination="GF9-qi-sBm" id="2XV-rc-CPS"/>
+                        <outlet property="minutesLabel" destination="GF9-qi-sBm" id="jeu-0s-Ulj"/>
+                        <outlet property="secondsLabel" destination="XWO-6s-xwb" id="cBH-42-SzW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KR8-qv-Mqh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
