--- a/Scales Timer/Base.lproj/Main.storyboard
+++ b/Scales Timer/Base.lproj/Main.storyboard
@@ -101,6 +101,17 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnt-ey-7sM" userLabel="ButtonView">
                                 <rect key="frame" x="0.0" y="430.00000000000006" width="414" height="256.33333333333343"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3K-2K-9dS">
+                                        <rect key="frame" x="256" y="103.33333333333337" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="RPQ-o7-Dw4"/>
+                                            <constraint firstAttribute="width" constant="50" id="mNU-2F-7A3"/>
+                                        </constraints>
+                                        <state key="normal" title="Reset"/>
+                                        <connections>
+                                            <action selector="resetButton:" destination="9o0-jA-z4L" eventType="touchUpInside" id="CU0-YP-OqZ"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kMX-ph-M3y">
                                         <rect key="frame" x="182" y="103" width="50" height="50"/>
                                         <constraints>
@@ -108,22 +119,20 @@
                                             <constraint firstAttribute="width" constant="50" id="ysk-yd-dsG"/>
                                         </constraints>
                                         <state key="normal" title="Pause"/>
+                                        <connections>
+                                            <action selector="pauseButton:" destination="9o0-jA-z4L" eventType="touchUpInside" id="iAw-2s-y4h"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yu8-Cv-bV9">
-                                        <rect key="frame" x="108" y="103" width="50" height="50"/>
+                                        <rect key="frame" x="108" y="103.33333333333337" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="2Pf-HY-7Jc"/>
                                             <constraint firstAttribute="width" constant="50" id="faN-uF-dHb"/>
                                         </constraints>
                                         <state key="normal" title="Start"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3K-2K-9dS">
-                                        <rect key="frame" x="256" y="102" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="RPQ-o7-Dw4"/>
-                                            <constraint firstAttribute="width" constant="50" id="mNU-2F-7A3"/>
-                                        </constraints>
-                                        <state key="normal" title="Reset"/>
+                                        <connections>
+                                            <action selector="startButton:" destination="9o0-jA-z4L" eventType="touchUpInside" id="sF8-yu-1rv"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
