--- a/Scales Timer/Base.lproj/Main.storyboard
+++ b/Scales Timer/Base.lproj/Main.storyboard
@@ -44,30 +44,30 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnt-ey-7sM" userLabel="Bottom Container">
                                 <rect key="frame" x="0.0" y="430.00000000000006" width="414" height="256.33333333333343"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3K-2K-9dS">
-                                        <rect key="frame" x="256" y="102" width="50" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3K-2K-9dS">
+                                        <rect key="frame" x="268.66666666666669" y="103.33333333333337" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="RPQ-o7-Dw4"/>
                                             <constraint firstAttribute="width" constant="50" id="mNU-2F-7A3"/>
                                         </constraints>
                                         <state key="normal" title="Reset"/>
                                         <connections>
-                                            <action selector="resetButton:" destination="9o0-jA-z4L" eventType="touchUpInside" id="CU0-YP-OqZ"/>
+                                            <action selector="resetButtonPressed:" destination="9o0-jA-z4L" eventType="touchUpInside" id="LSe-ti-cnr"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kMX-ph-M3y">
-                                        <rect key="frame" x="182" y="102" width="50" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kMX-ph-M3y">
+                                        <rect key="frame" x="169.66666666666666" y="103.33333333333337" width="75" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="QjP-AK-88g"/>
-                                            <constraint firstAttribute="width" constant="50" id="ysk-yd-dsG"/>
+                                            <constraint firstAttribute="width" constant="75" id="ysk-yd-dsG"/>
                                         </constraints>
                                         <state key="normal" title="Pause"/>
                                         <connections>
-                                            <action selector="pauseButton:" destination="9o0-jA-z4L" eventType="touchUpInside" id="iAw-2s-y4h"/>
+                                            <action selector="pauseButtonPressed:" destination="9o0-jA-z4L" eventType="touchUpInside" id="fg1-Fa-Py6"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yu8-Cv-bV9">
-                                        <rect key="frame" x="108" y="103.33333333333337" width="50" height="50"/>
+                                        <rect key="frame" x="95.666666666666657" y="103.33333333333337" width="49.999999999999972" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="2Pf-HY-7Jc"/>
                                             <constraint firstAttribute="width" constant="50" id="faN-uF-dHb"/>
@@ -169,6 +169,7 @@
                     <tabBarItem key="tabBarItem" title="Timer" id="s6Q-mx-Hjp"/>
                     <connections>
                         <outlet property="minutesLabel" destination="GF9-qi-sBm" id="jeu-0s-Ulj"/>
+                        <outlet property="pauseResumeButton" destination="kMX-ph-M3y" id="fqP-n4-xgs"/>
                         <outlet property="secondsLabel" destination="XWO-6s-xwb" id="cBH-42-SzW"/>
                     </connections>
                 </viewController>
